<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <!-- Activity -->
    <string name="title_activity_location">My location</string>
    <string name="title_activity_add_location">Add location</string>

    <!-- Menu -->
    <string name="menu_location">Location</string>
    <string name="menu_location_here" translatable="false">@string/title_activity_location</string>
    <string name="menu_location_add" translatable="false">@string/add</string>
    <string name="menu_location_cancel" translatable="false">@string/cancel</string>
    <string name="menu_location_save" translatable="false">@string/ok</string>
    <string name="menu_location_fetch">Show</string>

    <!-- Preferences -->
    <string name="coords_title">Coordinates</string>
    <string name="coords_format_title">Coordinates format</string>
    <string name="coords_format_none" translatable="false">@string/off</string>
    <string name="coords_format_decimal">Decimal</string>
    <string name="coords_format_sexagesimal">Sexagesimal</string>
    <string name="coords_elevation_title">Elevation</string>

    <!-- Location -->
    <string name="location_unknown">Unknown address</string>
    <string name="location_elevation">%.0fm</string>
    <string name="location_decimal">Lat. %1$s; Lng. %2$s</string>
    <string name="location_decimal_with_elevation">Lat. %1$s; Lng. %2$s; Elev. %3$s</string>
    <string name="location_sexagesimal" translatable="false">&#x202D;%1$s %2$s</string>
    <string name="location_sexagesimal_with_elevation" translatable="false">‪‪&#x202D;%1$s‪‪ %2$s ‪‪%3$s‪‪</string>
    <string name="north">N</string>
    <string name="east">E</string>
    <string name="south">S</string>
    <string name="west">W</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="coords_format_label" translatable="false">@string/coords_format_title</string>
    <string name="latitude_label" translatable="false">@string/latitude</string>
    <string name="longitude_label" translatable="false">@string/longitude</string>
    <string name="address_label">Address</string>
    <string name="degrees_symbol" translatable="false">°</string>
    <string name="minutes_symbol" translatable="false">\'</string>
    <string name="seconds_symbol" translatable="false">\"</string>
    <string name="fraction_symbol">.</string>
    <string name="bearing_decimal" translatable="false">%1$s%2$.1f&#x00B0;%3$s</string>
    <string name="bearing_sexagesimal" translatable="false">&#x202D;%1$s%2$s</string>

    <!-- Settings screen - Privacy -->
    <string name="pref_privacy_clear_history">Clear history</string>

</resources>