<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_location_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_location_cancel"/>
    <item
        android:id="@+id/menu_location_add"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_location_save"/>
    <item
        android:id="@+id/menu_location_show"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_location_fetch"/>

</menu>