<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <NumberPicker
        android:id="@+id/latitude_degrees_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <requestFocus/>
    </NumberPicker>

    <ViewSwitcher
        android:id="@+id/latitude_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:measureAllChildren="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fraction_symbol"/>

            <EditText
                android:id="@+id/latitude_decimal_edit"
                style="@style/Widget.TextView.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="number"
                android:maxLength="6"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_symbol"/>

            <NumberPicker
                android:id="@+id/latitude_minutes_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes_symbol"/>

            <NumberPicker
                android:id="@+id/latitude_seconds_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fraction_symbol"/>

            <EditText
                android:id="@+id/latitude_milliseconds_edit"
                style="@style/Widget.TextView.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:maxLength="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds_symbol"/>
        </LinearLayout>
    </ViewSwitcher>

    <Spinner
        android:id="@+id/latitude_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/latitude_entries"
        android:spinnerMode="dropdown"/>
</LinearLayout>