<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coords_format_label"/>

        <Spinner
            android:id="@+id/coords_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:entries="@array/coords_format_editor_entries"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/latitude_label"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ViewSwitcher
                android:id="@+id/latitude_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:measureAllChildren="false">

                <EditText
                    android:id="@+id/latitude_decimal_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/latitude_degrees_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:maxLength="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degrees_symbol"/>

                    <EditText
                        android:id="@+id/latitude_minutes_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:maxLength="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minutes_symbol"/>

                    <EditText
                        android:id="@+id/latitude_seconds_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:inputType="number"
                        android:maxLength="3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seconds_symbol"/>
                </LinearLayout>
            </ViewSwitcher>

            <Spinner
                android:id="@+id/latitude_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/latitude_entries"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/longitude_label"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ViewSwitcher
                android:id="@+id/longitude_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:measureAllChildren="false">

                <EditText
                    android:id="@+id/longitude_decimal_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="numberDecimal"
                    android:maxLength="10"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/longitude_degrees_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:maxLength="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degrees_symbol"/>

                    <EditText
                        android:id="@+id/longitude_minutes_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:maxLength="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minutes_symbol"/>

                    <EditText
                        android:id="@+id/longitude_seconds_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:inputType="number"
                        android:maxLength="3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seconds_symbol"/>
                </LinearLayout>
            </ViewSwitcher>

            <Spinner
                android:id="@+id/longitude_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/longitude_entries"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/address_label"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/location_unknown"/>
    </LinearLayout>
</ScrollView>